--- a/paw-testnet-1/config/app.toml
+++ b/paw-testnet-1/config/app.toml
@@ -1,99 +1,173 @@
-# PAW Testnet Example Configuration
-# Copy this file to ~/.paw/config/app.toml
+# This is a TOML config file.
+# For more information, see https://github.com/toml-lang/toml
 
 ###############################################################################
 ###                           Base Configuration                            ###
 ###############################################################################
 
-# Minimum gas prices for transactions
-minimum-gas-prices = "0.001upaw"
+# The minimum gas prices a validator is willing to accept for processing a
+# transaction. A transaction's fees must meet the minimum of any denomination
+# specified in this config (e.g. 0.25token1,0.0001token2).
+minimum-gas-prices = "0.001000000000000000upaw"
 
-# Pruning strategy (default|nothing|everything|custom)
+# The maximum gas a query coming over rest/grpc may consume.
+# If this is set to zero, the query can consume an unbounded amount of gas.
+query-gas-limit = "0"
+
+# default: the last 362880 states are kept, pruning at 10 block intervals
+# nothing: all historic states will be saved, nothing will be deleted (i.e. archiving node)
+# everything: 2 latest states will be kept; pruning at 10 block intervals.
+# custom: allow pruning options to be manually specified through 'pruning-keep-recent', and 'pruning-interval'
 pruning = "default"
 
-# Custom pruning settings (only applicable if pruning = "custom")
-pruning-keep-recent = "100"
-pruning-keep-every = "0"
-pruning-interval = "10"
+# These are applied if and only if the pruning strategy is custom.
+pruning-keep-recent = "0"
+pruning-interval = "0"
 
-# Halt height (0 = disabled)
+# HaltHeight contains a non-zero block height at which a node will gracefully
+# halt and shutdown that can be used to assist upgrades and testing.
+#
+# Note: Commitment of state will be attempted on the corresponding block.
 halt-height = 0
 
-# Halt time (0 = disabled)
+# HaltTime contains a non-zero minimum block time (in Unix seconds) at which
+# a node will gracefully halt and shutdown that can be used to assist upgrades
+# and testing.
+#
+# Note: Commitment of state will be attempted on the corresponding block.
 halt-time = 0
 
-# Minimum percentage of total validators required to send valid votes
+# MinRetainBlocks defines the minimum block height offset from the current
+# block being committed, such that all blocks past this offset are pruned
+# from CometBFT. It is used as part of the process of determining the
+# ResponseCommit.RetainHeight value during ABCI Commit. A value of 0 indicates
+# that no blocks should be pruned.
+#
+# This configuration value is only responsible for pruning CometBFT blocks.
+# It has no bearing on application state pruning which is determined by the
+# "pruning-*" configurations.
+#
+# Note: CometBFT block pruning is dependant on this parameter in conjunction
+# with the unbonding (safety threshold) period, state pruning and state sync
+# snapshot parameters to determine the correct minimum value of
+# ResponseCommit.RetainHeight.
 min-retain-blocks = 0
 
-# Inter block cache
+# InterBlockCache enables inter-block caching.
 inter-block-cache = true
 
-# Index events (true = all events, false = no events)
+# IndexEvents defines the set of events in the form {eventType}.{attributeKey},
+# which informs CometBFT what to index. If empty, all events will be indexed.
+#
+# Example:
+# ["message.sender", "message.recipient"]
 index-events = []
 
-# IAVL cache size (number of nodes)
+# IavlCacheSize set the size of the iavl tree cache (in number of nodes).
 iavl-cache-size = 781250
 
-# Disable IAVL fast node
+# IAVLDisableFastNode enables or disables the fast node feature of IAVL. 
+# Default is false.
 iavl-disable-fastnode = false
+
+# AppDBBackend defines the database backend type to use for the application and snapshots DBs.
+# An empty string indicates that a fallback will be used.
+# The fallback is the db_backend value set in CometBFT's config.toml.
+app-db-backend = ""
 
 ###############################################################################
 ###                         Telemetry Configuration                         ###
 ###############################################################################
 
 [telemetry]
+
+# Prefixed with keys to separate services.
 service-name = ""
+
+# Enabled enables the application telemetry functionality. When enabled,
+# an in-memory sink is also enabled by default. Operators may also enabled
+# other sinks such as Prometheus.
 enabled = false
+
+# Enable prefixing gauge values with hostname.
 enable-hostname = false
+
+# Enable adding hostname to labels.
 enable-hostname-label = false
+
+# Enable adding service to labels.
 enable-service-label = false
+
+# PrometheusRetentionTime, when positive, enables a Prometheus metrics sink.
 prometheus-retention-time = 0
-global-labels = []
+
+# GlobalLabels defines a global set of name/value label tuples applied to all
+# metrics emitted using the wrapper functions defined in telemetry package.
+#
+# Example:
+# [["chain_id", "cosmoshub-1"]]
+global-labels = [
+]
+
+# MetricsSink defines the type of metrics sink to use.
+metrics-sink = ""
+
+# StatsdAddr defines the address of a statsd server to send metrics to.
+# Only utilized if MetricsSink is set to "statsd" or "dogstatsd".
+statsd-addr = ""
+
+# DatadogHostname defines the hostname to use when emitting metrics to
+# Datadog. Only utilized if MetricsSink is set to "dogstatsd".
+datadog-hostname = ""
 
 ###############################################################################
 ###                           API Configuration                             ###
 ###############################################################################
 
 [api]
-# Enable API server
+
+# Enable defines if the API server should be enabled.
 enable = true
 
-# Swagger documentation
-swagger = true
+# Swagger defines if swagger documentation should automatically be registered.
+swagger = false
 
-# API address
-address = "tcp://0.0.0.0:1317"
+# Address defines the API server to listen on.
+address = "tcp://0.0.0.0:11317"
 
-# Maximum number of simultaneous connections
+# MaxOpenConnections defines the number of maximum open connections.
 max-open-connections = 1000
 
-# Read timeout
+# RPCReadTimeout defines the CometBFT RPC read timeout (in seconds).
 rpc-read-timeout = 10
 
-# Write timeout
+# RPCWriteTimeout defines the CometBFT RPC write timeout (in seconds).
 rpc-write-timeout = 0
 
-# Max body bytes for requests
+# RPCMaxBodyBytes defines the CometBFT maximum request body (in bytes).
 rpc-max-body-bytes = 1000000
 
-# Enable unsafe CORS
-enabled-unsafe-cors = true
+# EnableUnsafeCORS defines if CORS should be enabled (unsafe - use it at your own risk).
+enabled-unsafe-cors = false
 
 ###############################################################################
 ###                           gRPC Configuration                            ###
 ###############################################################################
 
 [grpc]
-# Enable gRPC server
+
+# Enable defines if the gRPC server should be enabled.
 enable = true
 
-# gRPC address
-address = "0.0.0.0:9090"
+# Address defines the gRPC server address to bind to.
+address = "0.0.0.0:11090"
 
-# Maximum receive message size
+# MaxRecvMsgSize defines the max message size in bytes the server can receive.
+# The default value is 10MB.
 max-recv-msg-size = "10485760"
 
-# Maximum send message size
+# MaxSendMsgSize defines the max message size in bytes the server can send.
+# The default value is math.MaxInt32.
 max-send-msg-size = "2147483647"
 
 ###############################################################################
@@ -101,44 +175,62 @@ max-send-msg-size = "2147483647"
 ###############################################################################
 
 [grpc-web]
-# Enable gRPC-web gateway
+
+# GRPCWebEnable defines if the gRPC-web should be enabled.
+# NOTE: gRPC must also be enabled, otherwise, this configuration is a no-op.
+# NOTE: gRPC-Web uses the same address as the API server.
 enable = true
-
-# gRPC-web address
-address = "0.0.0.0:9091"
-
-# Enable unsafe CORS
-enable-unsafe-cors = true
 
 ###############################################################################
 ###                        State Sync Configuration                         ###
 ###############################################################################
 
+# State sync snapshots allow other nodes to rapidly join the network without replaying historical
+# blocks, instead downloading and applying a snapshot of the application state at a given height.
 [state-sync]
-# Snapshot interval (0 = disabled)
-snapshot-interval = 1000
 
-# Snapshot retention (how many snapshots to keep)
+# snapshot-interval specifies the block interval at which local state sync snapshots are
+# taken (0 to disable).
+snapshot-interval = 0
+
+# snapshot-keep-recent specifies the number of recent snapshots to keep and serve (0 to keep all).
 snapshot-keep-recent = 2
 
 ###############################################################################
-###                         Mempool Configuration                           ###
+###                              State Streaming                            ###
+###############################################################################
+
+# Streaming allows nodes to stream state to external systems.
+[streaming]
+
+# streaming.abci specifies the configuration for the ABCI Listener streaming service.
+[streaming.abci]
+
+# List of kv store keys to stream out via gRPC.
+# The store key names MUST match the module's StoreKey name.
+#
+# Example:
+# ["acc", "bank", "gov", "staking", "mint"[,...]]
+# ["*"] to expose all keys.
+keys = []
+
+# The plugin name used for streaming via gRPC.
+# Streaming is only enabled if this is set.
+# Supported plugins: abci
+plugin = ""
+
+# stop-node-on-err specifies whether to stop the node on message delivery error.
+stop-node-on-err = true
+
+###############################################################################
+###                         Mempool                                         ###
 ###############################################################################
 
 [mempool]
-# Maximum number of transactions in mempool
-max-txs = 5000
-
-###############################################################################
-###                         Wasm Configuration                              ###
-###############################################################################
-
-[wasm]
-# Smart query gas limit
-query_gas_limit = 300000
-
-# Memory cache size in MiB
-memory_cache_size = 100
-
-# Simulation gas limit (0 = no limit)
-simulation_gas_limit = 0
+# Setting max-txs to 0 will allow for a unbounded amount of transactions in the mempool.
+# Setting max_txs to negative 1 (-1) will disable transactions from being inserted into the mempool (no-op mempool).
+# Setting max_txs to a positive number (> 0) will limit the number of transactions in the mempool, by the specified amount.
+#
+# Note, this configuration only applies to SDK built-in app-side mempool
+# implementations.
+max-txs = -1
